tests/tooling/fixtures/native/execution/positive/octal_literal_global_initializer_chain.objc3
module OctalLiteralGlobalInitializerChain;

let a = 0o7;
let b = a + 0o2;
let c = b << 0o1;

fn main() -> i32 {
  return c;
}
