tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_after_param_name_extern.objc3
module MisplacedQualifierAfterParamNameExtern;

fn add(lhs extern: i32, rhs: i32) -> i32;

fn main() -> i32 {
  return 0;
}